--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -22,7 +22,7 @@
         - if @patient && @patient.persisted?
           %ul.left
             %li.has-dropdown
-              = link_to " " + "#{@patient.full_name}", clinical_summary_patient_path(@patient), :title => "Clinical Summary", :class => "fi-graph-trend"
+              = link_to " " + "#{@patient.full_name}", clinical_summary_patient_path(@patient), :title => "Clinical Summary", :"data-tooltip aria-haspopup" => "true", :class => "fi-graph-trend tip-right"
               %ul.dropdown
                 %li
                   = link_to "New Letter", "#"
