--- a/app/views/patients/_clin_sum_sub_nav.html.haml
+++ b/app/views/patients/_clin_sum_sub_nav.html.haml
@@ -1,5 +1,5 @@
 %dd.remove-name.patient-name
-  = link_to " " + "#{@patient.full_name}", clinical_summary_patient_path(@patient), :title => "Clinical Summary", :class => "fi-graph-trend"
+  = link_to " " + "#{@patient.full_name}", clinical_summary_patient_path(@patient), :title => "Clinical Summary", :"data-tooltip aria-haspopup" => "true", :class => "fi-graph-trend has-tip"
 %dd
   = link_to " " + "View", "#", :title => "View Letters", :title => "Letters", :class => "fi-mail icon-style"
 %dd
@@ -10,3 +10,5 @@
   = link_to "Meds", medications_patient_path(@patient), :title => "Manage Medications"
 %dd
   = link_to "Events", patient_patient_events_path(@patient), :title => "Patient Events"
+
+
