Converted patient_event table to a list in clinical summary

--- a/app/assets/stylesheets/foundation/navigation.css.scss
+++ b/app/assets/stylesheets/foundation/navigation.css.scss
@@ -3,6 +3,11 @@
 //   margin: 0;
 // }
 
+a.fi-plus:before a.fi-minus:before {
+  position: absolute;
+  right: 0;
+}
+
 .sub-nav dd a.has-tip:hover {
   color: #008cba;
 }
