--- a/app/assets/stylesheets/foundation/patient_medications.css.scss
+++ b/app/assets/stylesheets/foundation/patient_medications.css.scss
@@ -22,6 +22,13 @@
   }
 }
 
+.find-drug-list ul.drug-results-admin {
+  height: 15em;
+ 
+  overflow-y: scroll;
+  // border: 1px solid #ccc;
+}
+
 .esa-or-immno {
   display: none;
 }
