--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -5,26 +5,26 @@
 
 .clinical-summary
   .columns.large-6
-    %h5 
+    %h5.g-center 
       = link_to "#{@patient.problems.length} Problems", problems_patient_path(@patient)
 
-      %ul.no-bullet
-        - @patient.problems.each do |p|
-     
-          %li
-            = "#{p.description}, #{p.created_at.strftime("%d/%m/%Y")}, #{p.user_id}"
-                      
+    %ul.no-bullet
+      - @patient.problems.each do |p|
+   
+        %li
+          = "#{p.description}, #{p.created_at.strftime("%d/%m/%Y")}, #{p.user_id}"
+                    
 .clinical-summary
   .columns.large-6
-    %h5
+    %h5.g-center
       = link_to "#{@patient.patient_medications.length} Current Medications", medications_index_patient_path(@patient)
 
-      %ul.no-bullet
-        - @patient.patient_medications.each do |p|
-     
-          %li{:class => "drug-#{p.medication.type.downcase}"}
-            
-            = "#{p.medication.type}, #{p.medication.name}, #{p.dose}, #{I18n.t("enums.route.#{p.route}")}, #{p.frequency}, #{p.date}"          
+    %ul.no-bullet
+      - @patient.patient_medications.each do |p|
+   
+        %li{:class => "drug-#{p.medication.type.downcase}"}
+          
+          = "#{p.medication.type}, #{p.medication.name}, #{p.dose}, #{I18n.t("enums.route.#{p.route}")}, #{p.frequency}, #{p.date}"          
 
 .clinical-summary
   .columns.large-12
