Edited styling of admin drugs list

--- a/app/assets/stylesheets/foundation/patient_medications.css.scss
+++ b/app/assets/stylesheets/foundation/patient_medications.css.scss
@@ -23,9 +23,9 @@
 }
 
 .find-drug-list ul.drug-results-admin {
-  height: 15em;
+  height: 20em;
  
-  overflow-y: scroll;
+  overflow-x: scroll;
   // border: 1px solid #ccc;
 }
 
