--- a/app/assets/stylesheets/foundation/patient_medications.css.scss
+++ b/app/assets/stylesheets/foundation/patient_medications.css.scss
@@ -25,7 +25,7 @@
 .find-drug-list ul.drug-results-admin {
   height: 20em;
  
-  overflow-x: scroll;
+  overflow-y: scroll;
   // border: 1px solid #ccc;
 }
 
