Added color class for cancel buttons

--- a/app/assets/stylesheets/foundation/navigation.css.scss
+++ b/app/assets/stylesheets/foundation/navigation.css.scss
@@ -3,6 +3,10 @@
 //   margin: 0;
 // }
 
+.cancel {
+  background-color: red;
+} 
+
 a.fi-plus:before a.fi-minus:before {
   position: absolute;
   right: 0;
