Added cancel class to cancel buttons

--- a/app/views/patient_event_types/edit.html.haml
+++ b/app/views/patient_event_types/edit.html.haml
@@ -10,4 +10,4 @@
 
       = submit_tag "Update Patient Event Type", class: "button tiny right"
 
-      = link_to "Cancel", patient_event_types_path, :class => "button tiny"
+      = link_to "Cancel", patient_event_types_path, :class => "button tiny cancel"
