--- a/app/views/patient_event_types/new.html.haml
+++ b/app/views/patient_event_types/new.html.haml
@@ -14,5 +14,5 @@
 
         = submit_tag "Save", class: "button tiny right"
 
-        %li= link_to "Cancel", patient_event_types_path, :class => "button tiny"
+        %li= link_to "Cancel", patient_event_types_path, :class => "button tiny cancel"
 
