--- a/app/views/patients/edit.html.haml
+++ b/app/views/patients/edit.html.haml
@@ -11,4 +11,4 @@
 
       = submit_tag "Update Demographics", class: "button tiny right"
       
-      = link_to "Cancel", demographics_patient_path(@patient), class: "button tiny left"
+      = link_to "Cancel", demographics_patient_path(@patient), class: "button tiny left cancel"
