--- a/app/views/patients/new.html.haml
+++ b/app/views/patients/new.html.haml
@@ -12,4 +12,4 @@
 
       = submit_tag "Save a New Renal Patient", class: "button tiny right"
 
-      = link_to "Cancel", patients_path, class: "button tiny left"
+      = link_to "Cancel", patients_path, class: "button tiny left cancel"
