--- a/app/views/patient_events/new.html.haml
+++ b/app/views/patient_events/new.html.haml
@@ -29,7 +29,7 @@
             = f.label :notes, "Notes"
             = f.text_area(:notes, :cols => 50, :rows => 11)
         .row
-          = link_to "Cancel", clinical_summary_patient_path(@patient), class: "button tiny left"
+          = link_to "Cancel", clinical_summary_patient_path(@patient), class: "button tiny left cancel"
 
           = submit_tag "Save Patient Event", class: "button tiny right"
 
