--- a/app/views/patients/problems.html.haml
+++ b/app/views/patients/problems.html.haml
@@ -30,7 +30,7 @@
               %a.button.tiny.left.mt.add-problem{href: '#'}
                 Add another problem
     
-        = link_to "Cancel", clinical_summary_patient_path(@patient), class: "button tiny left mt"
+        = link_to "Cancel", clinical_summary_patient_path(@patient), class: "button tiny left cancel mt"
                    
       - else
         %dl.accordion{data: {accordion: true} }
