--- a/app/views/patient_events/new.html.haml
+++ b/app/views/patient_events/new.html.haml
@@ -31,7 +31,7 @@
         .row
           = link_to "Cancel", clinical_summary_patient_path(@patient), class: "button tiny left cancel"
 
-          = submit_tag "Save Patient Event", class: "button tiny right"
+          = submit_tag "Save Patient Event", class: "button tiny right save"
 
 .clinical-summary
   = content_for :secondary_nav do  
