--- a/app/views/patients/new.html.haml
+++ b/app/views/patients/new.html.haml
@@ -10,6 +10,6 @@
 
       = render partial: "patients/demographic_form", locals: { patient: f }
 
-      = submit_tag "Save a New Renal Patient", class: "button tiny right"
+      = submit_tag "Save a New Renal Patient", class: "button tiny right save"
 
       = link_to "Cancel", patients_path, class: "button tiny left cancel"
