--- a/app/views/patient_event_types/index.html.haml
+++ b/app/views/patient_event_types/index.html.haml
@@ -14,6 +14,6 @@
           .small-4.large-2.columns
             = link_to "Edit", edit_patient_event_type_path(t.id)
           .small-4.large-2.columns
-            = link_to "Delete", patient_event_type_path(t.id), id: "#{t.id}-pet", method: :delete, data: {confirm: "Are you sure you want to delete this option?"}
+            = link_to "Delete", patient_event_type_path(t.id), id: "#{t.id}-pet", method: :delete, :class => "delete", data: {confirm: "Are you sure you want to delete this option?" }
 
   
