--- a/app/views/patient_event_types/new.html.haml
+++ b/app/views/patient_event_types/new.html.haml
@@ -12,7 +12,7 @@
         
         = render :partial => 'form', :locals => {:f => f}
 
-        = submit_tag "Save", class: "button tiny right"
+        = submit_tag "Save", class: "button tiny right save"
 
         %li= link_to "Cancel", patient_event_types_path, :class => "button tiny cancel"
 
