--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -68,6 +68,11 @@
           <a href="#" class="close">&times;</a>
 
     .main-content
+      - if @patient && @patient.persisted?
+        .row.g-center
+          %h4.patient-info
+            = "#{@patient.full_name} - KCH: #{@patient.local_patient_id}, Age: #{@patient.age}, #{I18n.t("enums.gender.#{@patient.sex}")}, DoB: #{@patient.dob}, Modal: "
+
       = yield
 
     - if content_for? :secondary_nav
