--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -1,7 +1,6 @@
 .row.g-center
-  %h5.fi-graph-trend
-    = "Clinical Summary for #{@patient.full_name} - KCH: #{@patient.local_patient_id}, Age: #{@patient.age}, #{I18n.t("enums.gender.#{@patient.sex}")}, DoB: #{@patient.dob}, Modal: "
-
+  %h5
+    = link_to " "+ "Clinical Summary", clinical_summary_patient_path(@patient), :class => "fi-graph-trend" 
 
 .clinical-summary
   .columns.large-6
