--- a/app/views/patients/problems.html.haml
+++ b/app/views/patients/problems.html.haml
@@ -1,6 +1,6 @@
 .row  
   %h5
-    = "Patient Problems for #{@patient.full_name}"
+    = link_to "Patient Problems", problems_patient_path(@patient)
 
 .row
   = form_for @patient do |f|  
