Added recording/displaying deceased patients

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -52,6 +52,8 @@
                 = link_to "All Patients", patients_path
               %li
                 = link_to "Add a New Patient", new_patient_path
+              %li
+                = link_to "Deceased Patients", death_patients_path
 
           %li.has-dropdown
             = link_to "Admin", patients_path
