--- a/app/views/patients/_problem_form.html.haml
+++ b/app/views/patients/_problem_form.html.haml
@@ -1,9 +1,17 @@
 = pb.hidden_field :id
 = pb.hidden_field :patient_id
 
+= label_tag :snomed_term
+= text_field_tag :snomed_term, params[:snomed_term], :placeholder => "Enter a snomed concept", :class => "snomed-lookup"
+
+/ TODO - Add a hidden field that saves the snomedid into the problem
+/ Maybe the term as well?
+
+%ul.snomed-results
+
 = pb.label :description
 = pb.text_field :description, :class => "probs-description"
 
-//change to hidden 
+//change to hidden
 = pb.label :user_id
 = pb.text_field :user_id
