Added snomed term select from dummy data to add a problem form

--- a/app/assets/stylesheets/foundation/problems.css.scss
+++ b/app/assets/stylesheets/foundation/problems.css.scss
@@ -1,3 +1,8 @@
 .accordion dd > a.problem {
   background-color: #B9B9DC;
 }
+
+li.snomed-select-link {
+  cursor: pointer;
+  text-decoration: underline;
+}
