--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -62,6 +62,8 @@
                 = link_to "Manage Patient Event Types", patient_event_types_path
               %li
                 = link_to "Manage Drugs", drugs_path
+              %li
+                = link_to "Manage Modalities", modality_codes_path
 
     - if flash[:notice]
       .row.flash-notice 
