--- a/app/views/modality_codes/index.html.haml
+++ b/app/views/modality_codes/index.html.haml
@@ -14,7 +14,7 @@
           .small-4.large-4.columns
             = m.code
           .small-4.large-2.columns
-            = link_to "Edit", "#"
+            = link_to "Edit", edit_modality_code_path(m.id)
           .small-4.large-2.columns
             = link_to "Delete", "#"
 
