Shortened set text in search field

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -40,7 +40,7 @@
                 .large-8.small-9.columns
                   = label_tag :patient_search, "Patient Search" do
                     = search_field_tag :patient_search, params[:patient_search], 
-                    :placeholder => "Patient Name, Local Patient ID or NHS Number"
+                    :placeholder => "Patient Name, Local Patient ID or NHS No."
                 .large-4.small-3.columns
                   = submit_tag "Find!", :title => "Find Patient", :class => "nav-search button tiny"
 
