--- a/app/assets/stylesheets/lib/foundation-icons/foundation-icons.css.scss
+++ b/app/assets/stylesheets/lib/foundation-icons/foundation-icons.css.scss
@@ -1,4 +1,4 @@
-/* 
+/*
  * Foundation Icons v 3.0
  * Made by ZURB 2013 http://zurb.com/playground/foundation-icon-fonts-3
  * MIT License
@@ -6,11 +6,11 @@
 
 @font-face {
   font-family: "foundation-icons";
-  src: url("foundation-icons.eot");
-  src: url("foundation-icons.eot?#iefix") format("embedded-opentype"),
-       url("foundation-icons.woff") format("woff"),
-       url("foundation-icons.ttf") format("truetype"),
-       url("foundation-icons.svg#fontcustom") format("svg");
+  src: asset-url("assets/lib/foundation-icons/foundation-icons.eot");
+  src: asset-url("assets/lib/foundation-icons/foundation-icons.eot?#iefix") format("embedded-opentype"),
+       asset-url("assets/lib/foundation-icons/foundation-icons.woff") format("woff"),
+       asset-url("assets/lib/foundation-icons/foundation-icons.ttf") format("truetype"),
+       asset-url("assets/lib/foundation-icons/foundation-icons.svg#fontcustom") format("svg");
   font-weight: normal;
   font-style: normal;
 }
