--- a/app/views/patients/demographics.html.haml
+++ b/app/views/patients/demographics.html.haml
@@ -36,10 +36,10 @@
       .large-3.columns
         %dl
           %dt Date of Birth:
-          %dd= "#{@patient.dob}"
+          %dd= "#{@patient.dob.strftime("%d/%m/%Y")}"
 
           %dt Date of Death:
-          %dd= "#{@patient.death_date}"
+          %dd= "#{@patient.death_date.strftime("%d/%m/%Y")}"
       .large-12.columns
         %dl
           %dt Paediatric Patient:
