--- a/app/views/patients/demographics.html.haml
+++ b/app/views/patients/demographics.html.haml
@@ -39,7 +39,7 @@
           %dd= "#{@patient.dob.strftime("%d/%m/%Y")}"
 
           %dt Date of Death:
-          %dd= "#{@patient.death_date.strftime("%d/%m/%Y")}"
+          %dd= "#{@patient.death_date.blank? ? "N/A" : @patient.death_date.strftime("%d/%m/%Y")}"
       .large-12.columns
         %dl
           %dt Paediatric Patient:
