--- a/app/views/patients/modality.html.haml
+++ b/app/views/patients/modality.html.haml
@@ -16,4 +16,8 @@
 
   = link_to "Cancel", clinical_summary_patient_path(@patient), class: "button tiny left cancel mt"
                    
-   
+.clinical-summary
+  = content_for :secondary_nav do  
+    = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
+
+ 
