--- a/app/views/patients/death_update.html.haml
+++ b/app/views/patients/death_update.html.haml
@@ -27,3 +27,9 @@
       = submit_tag "Save", class: "button tiny right save"
 
       = link_to "Cancel", modality_patient_path(@patient), class: "button tiny left cancel"
+
+.clinical-summary
+  = content_for :secondary_nav do  
+    = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
+
+ 
