--- a/app/views/patients/edit.html.haml
+++ b/app/views/patients/edit.html.haml
@@ -12,3 +12,8 @@
       = submit_tag "Update Demographics", class: "button tiny right"
       
       = link_to "Cancel", demographics_patient_path(@patient), class: "button tiny left cancel"
+
+.clinical-summary
+  = content_for :secondary_nav do  
+    = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
+
