--- a/app/views/patients/_modality_form.html.haml
+++ b/app/views/patients/_modality_form.html.haml
@@ -24,7 +24,7 @@
     = m.collection_select :modality_reason_id, modal_reasons_for(m.object.modal_change_type), :id, :description, {}, :class => "modality-reason-select"
   
   %li
-    = link_to "Renal Registry Reason for Change Codes", modality_reasons_path, class: "button tiny mt"
+    = link_to "Renal Registry Reason for Change Codes", "#", id: "modal-reason-code", class: "button tiny mt"
 
   %li
     = m.label :date, "Start Date"
