Fixed errors occurring with modal/pop up

--- a/app/assets/stylesheets/foundation/modal_window.css.scss
+++ b/app/assets/stylesheets/foundation/modal_window.css.scss
@@ -1,4 +1,4 @@
-.show {
+.modal-show {
   position: relative;
   background: #333;
   width: 100%;
@@ -30,7 +30,7 @@
   overflow: scroll;
 }
 
-.close {
+.modal-close {
   display: fixed;
   float: right;
   width: 20px;
