--- a/app/views/patients/_modality_form.html.haml
+++ b/app/views/patients/_modality_form.html.haml
@@ -13,8 +13,8 @@
     = m.collection_select :modality_code_id, ModalityCode.all, :id, :name, {}, :id => "modality-code-select" 
   
   .row  
-    %li.large-2.columns
-      = link_to "Cause of Death", death_update_patient_path, {:style => m.object.modality_code.blank? || m.object.modality_code.name == "Death" ? 'display:block' : 'display:none', class: "update-death button tiny mt"}
+    %li.large-3.columns
+      = link_to "Update Cause of Death", death_update_patient_path, {:style => m.object.modality_code.blank? || m.object.modality_code.name == "Death" ? 'display:block' : 'display:none', class: "update-death button tiny mt"}
    
   %li
     = m.label :modal_change_type, "Type of Change"
