--- a/app/views/patients/_problem_form.html.haml
+++ b/app/views/patients/_problem_form.html.haml
@@ -1,5 +1,6 @@
-= pb.hidden_field :id
-= pb.hidden_field :patient_id
+.problem-form{data: { index: @patient.problems.length - 1 }}
+  = pb.hidden_field :id
+  = pb.hidden_field :patient_id
 
 = pb.label :description
 = pb.text_field :description, :class => "probs-description"
