--- a/app/views/patients/_problem_form.html.haml
+++ b/app/views/patients/_problem_form.html.haml
@@ -1,10 +1,25 @@
-.problem-form{data: { index: @patient.problems.length - 1 }}
-  = pb.hidden_field :id
-  = pb.hidden_field :patient_id
+- if pb.object.new_record?
 
-  = pb.label :description
-  = pb.text_field :description, :class => "probs-description"
+  .problem-form{data: { index: @patient.problems.length - 1 }}
+    = pb.hidden_field :id
+    = pb.hidden_field :patient_id
 
-  //change to hidden 
-  = pb.label :user_id
-  = pb.text_field :user_id
+    = pb.label :description
+    = pb.text_field :description, :class => "probs-description"
+
+    //change to hidden 
+    = pb.label :user_id
+    = pb.text_field :user_id
+
+- else
+  
+  .saved-problem-form
+    = pb.hidden_field :id
+    = pb.hidden_field :patient_id
+
+    = pb.label :description
+    = pb.text_field :description, :class => "probs-description"
+
+    //change to hidden 
+    = pb.label :user_id
+    = pb.text_field :user_id
