--- a/app/assets/stylesheets/foundation/patient_medications.css.scss
+++ b/app/assets/stylesheets/foundation/patient_medications.css.scss
@@ -16,7 +16,7 @@
   overflow-y: scroll;
   border: 1px solid #ccc;
 
-  li {
+  li.drug-select-link {
     cursor: pointer;
     text-decoration: underline;
   }
