--- a/app/views/patients/problems.html.haml
+++ b/app/views/patients/problems.html.haml
@@ -22,8 +22,30 @@
               %legend
                 Add New Problem
 
-              .row#new-probs-template  
-                = render :partial => 'problem_form', :locals => { :pb => pb }
+              .row#new-probs-template
+
+                .problem-form{data: { index: @patient.problems.length - 1 }}
+                  .a-problem
+                                        
+                    = pb.hidden_field :id
+                    = pb.hidden_field :patient_id
+
+                    = label_tag :snomed_term
+                    = text_field_tag :snomed_term, nil, :placeholder => "Enter a snomed concept", :class => "snomed-lookup"
+
+                    %ul.no-bullet.snomed-results
+
+                    = pb.hidden_field :snomed_id, :class => "selected-snomed-id"
+
+                    = pb.label :description
+                    = pb.text_field :description, :class => "probs-description"
+
+                    //change to hidden 
+                    = pb.label :user_id
+                    = pb.text_field :user_id
+              
+                .hidden-problem-form
+                  = render :partial => 'problem_form', :locals => { :pb => pb }
               
                 #additional-form
 
