--- a/app/views/patients/death_update.html.haml
+++ b/app/views/patients/death_update.html.haml
@@ -13,13 +13,13 @@
       = hidden_field_tag :template, "death_update"
 
       = f.label :death_date, "Date of Death"
-      = f.date_select(:death_date, {start_year: (120.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year]}, class: "datetime")
+      = f.date_select(:death_date, {start_year: (120.years.ago).year, end_year: Time.now.year, order: [:day, :month, :year], include_blank: true}, class: "datetime")
       
       = f.label :first_edta_code_id, "EDTA Cause of Death (1)"
-      = f.collection_select :first_edta_code_id, EdtaCode.all, :id, :death_cause, {:prompt => "Select 1st cause of death"}, :class => "edta-select"
+      = f.collection_select :first_edta_code_id, EdtaCode.all, :id, :death_cause, {:prompt => "Select 1st cause of death", include_blank: true}, :class => "edta-select"
 
       = f.label :second_edta_code_id, "EDTA Cause of Death (2)"
-      = f.collection_select :second_edta_code_id, EdtaCode.all, :id, :death_cause, {:prompt => "Select 2nd cause of death"}, :class => "edta-select"
+      = f.collection_select :second_edta_code_id, EdtaCode.all, :id, :death_cause, {:prompt => "Select 2nd cause of death", include_blank: true}, :class => "edta-select"
 
       = f.label :death_details, "Notes/Details"
       = f.text_field :death_details
