Fixed issue in adding a problem form

--- a/app/views/patients/_problem_form.html.haml
+++ b/app/views/patients/_problem_form.html.haml
@@ -3,7 +3,7 @@
   .problem-form{data: { index: @patient.problems.length - 1 }}
     .a-problem
       .row
-        .remove-problem.fi-x.right
+        .remove-problem.right.add-x
 
       = pb.hidden_field :id
       = pb.hidden_field :patient_id
