Created section for mini renal profile/navigation

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -86,6 +86,10 @@
           %h4.patient-info
             = "#{@patient.full_name} - KCH: #{@patient.local_patient_id}, Age: #{@patient.age}, #{I18n.t("enums.gender.#{@patient.sex}")}, DoB: #{@patient.dob}, #{@patient.patient_modality.blank? || @patient.patient_modality.new_record? ? "No Modal" : @patient.patient_modality.modality_code.name}"
 
+        .row
+          .renal-profile
+            = link_to "ESRF", esrf_info_patient_path(@patient)
+
       = yield
 
     - if content_for? :secondary_nav
