--- a/app/views/patients/clinical_summary.html.haml
+++ b/app/views/patients/clinical_summary.html.haml
@@ -1,6 +1,6 @@
 .row.g-center
   %h4
-    = link_to " "+ "Clinical Summary", clinical_summary_patient_path(@patient), :class => "fi-graph-trend" 
+    = link_to "Clinical Summary", clinical_summary_patient_path(@patient)
 
 .clinical-summary
   .columns.large-6
