Adjusted styling or problems, made edit toggle more obvious

--- a/app/assets/stylesheets/foundation/toggle.css.scss
+++ b/app/assets/stylesheets/foundation/toggle.css.scss
@@ -39,3 +39,11 @@
 .accordion .accordion-navigation > .content.active, .accordion dd  > .content.toggle-content {
   background: rgba(255, 255, 255, 0);
 }
+
+.fi-plus:before, .fi-minus:before {
+  color: #008cba;
+}
+
+.edit {
+  color: #999999;
+}
