--- a/app/assets/stylesheets/foundation/problems.css.scss
+++ b/app/assets/stylesheets/foundation/problems.css.scss
@@ -1,5 +1,6 @@
 .accordion dd > a.problem {
   background-color: #ffffff;
+  padding: 0;
 }
 
 ul.no-bullet.snomed-results {
@@ -15,7 +16,7 @@ li.snomed-select-link {
 }
 
 .a-problem {
-  background-color: #DCDCEE;
+  background-color: #f2f2f2;
   margin: 0.5em;
   border-radius: 0.5em;
   padding: 0.5em;
