--- a/app/assets/stylesheets/foundation/problems.css.scss
+++ b/app/assets/stylesheets/foundation/problems.css.scss
@@ -16,7 +16,7 @@ li.snomed-select-link {
 }
 
 .a-problem {
-  background-color: #f2f2f2;
+  background-color: #F8F8F8;
   margin: 0.5em;
   border-radius: 0.5em;
   padding: 0.5em;
