Adjusted styling of edit toggle for patient medications

--- a/app/assets/stylesheets/foundation/toggle.css.scss
+++ b/app/assets/stylesheets/foundation/toggle.css.scss
@@ -42,8 +42,10 @@
 
 .fi-plus:before, .fi-minus:before {
   color: #008cba;
+  padding-left: 0.5em;
 }
 
 .edit {
   color: #999999;
+  padding-right: 0.5em;
 }
