--- a/app/assets/stylesheets/foundation/patient_medications.css.scss
+++ b/app/assets/stylesheets/foundation/patient_medications.css.scss
@@ -1,16 +1,19 @@
 .accordion dd > a.drug-drug, li.drug-drug, tbody tr.drug-drug {
   background: #FFFFFF;
   padding: 0.2em;
+  border-radius: 0.5em;
 }
 
 .accordion dd > a.drug-esa, li.drug-esa, tbody tr.drug-esa{
   background: #FFFF99;
   padding: 0.2em;
+  border-radius: 0.5em;
 }
 
 .accordion dd > a.drug-immunosuppressant, li.drug-immunosuppressant, tbody tr.drug-immunosuppressant {
   background: #CCFFFF;
   padding: 0.2em;
+  border-radius: 0.5em;
 }
 
 .med-form.content ul.drug-results {
