--- a/app/views/patients/_patient_medication_fields.html.haml
+++ b/app/views/patients/_patient_medication_fields.html.haml
@@ -17,8 +17,8 @@
 
   / Only show this for ESA/ Imnosupressnt.
   .esa-or-immno
-    = pm.label :medication_id, "Select Drug"
-    = pm.collection_select :medication_id, drugs_for(pm.object.medication_type), :id, :name, {}, :class => "drug-select"
+    = pm.label :drug_select, "Select Drug"
+    = pm.collection_select :drug_select, drugs_for(pm.object.medication_type), :id, :name, {}, :class => "drug-select"
 
   / Same for both
   = pm.label :dose
