Set up for display problem history(wip - need to display in a better way)

--- a/app/views/patients/problems.html.haml
+++ b/app/views/patients/problems.html.haml
@@ -3,6 +3,12 @@
     = link_to "Patient Problems", problems_patient_path(@patient)
 
 .row
+  - @problem_history.each do |ph|
+    %ul.no-bullet
+      %li
+        = ph.object   
+
+.row
   = form_for @patient do |f|  
     = hidden_field_tag :redirect_url, problems_patient_path(@patient)
     
