--- a/app/views/patients/problems.html.haml
+++ b/app/views/patients/problems.html.haml
@@ -7,11 +7,18 @@
     = hidden_field_tag :redirect_url, problems_patient_path(@patient)
     
     = f.fields_for :problems do |pb|
-      %h4
-        History
-     
-      - pb.object.history.each do |p|
-        = p.description
+      - if pb.object.history != []
+        %dl.accordion.right{data: {accordion: true} }
+          %dd.accordion-navigation   
+            %a.problem-history-link.fi-plus.fi-minus.toggle-notes{ class: "problem-history", href: "#history-list-#{pb.object.id}" }  
+              View history of active problem 
+            
+            .content{ id: "history-list-#{pb.object.id}" }
+              - pb.object.history.each do |p|
+              
+                %ul.no-bullet
+                  %li.history
+                    = "#{p.description}, #{p.created_at.strftime("%d/%m/%Y")}"
 
       - if pb.object.new_record?
 
