Made widescreen styling css for all not just clinical summary

--- a/app/assets/stylesheets/foundation/globals.css.scss
+++ b/app/assets/stylesheets/foundation/globals.css.scss
@@ -27,3 +27,14 @@ body > .flash-notice {
   display: block;
   color: #999999;
 }
+
+.wide-screen {
+  width: 100%;
+  padding: 0 20px 0 20px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 62.5rem;
+}
+
