--- a/app/views/patient_events/new.html.haml
+++ b/app/views/patient_events/new.html.haml
@@ -33,7 +33,7 @@
 
           = submit_tag "Save Patient Event", class: "button tiny right save"
 
-.clinical-summary
+.wide-screen
   = content_for :secondary_nav do  
     = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
 
