--- a/app/views/patients/death_update.html.haml
+++ b/app/views/patients/death_update.html.haml
@@ -28,7 +28,7 @@
 
       = link_to "Cancel", modality_patient_path(@patient), class: "button tiny left cancel"
 
-.clinical-summary
+.wide-screen
   = content_for :secondary_nav do  
     = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
 
