--- a/app/views/patients/edit.html.haml
+++ b/app/views/patients/edit.html.haml
@@ -13,7 +13,7 @@
       
       = link_to "Cancel", demographics_patient_path(@patient), class: "button tiny left cancel"
 
-.clinical-summary
+.wide-screen
   = content_for :secondary_nav do  
     = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
 
