--- a/app/views/patients/medications.html.haml
+++ b/app/views/patients/medications.html.haml
@@ -47,7 +47,7 @@
 
     = f.submit "Save Medication", :class => "button tiny right save mt"
 
-.clinical-summary
+.wide-screen
   = content_for :secondary_nav do  
     = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
 
