--- a/app/views/patients/medications_index.html.haml
+++ b/app/views/patients/medications_index.html.haml
@@ -9,7 +9,7 @@
 
         = render partial: "patients/medications", locals: { model: @patient_medications }
 
-.clinical-summary
+.wide-screen
   = content_for :secondary_nav do  
     = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
 
