--- a/app/views/patients/problems.html.haml
+++ b/app/views/patients/problems.html.haml
@@ -68,7 +68,7 @@
 
     = f.submit "Save Problems", :class => "button tiny right save mt"
 
-.clinical-summary
+.wide-screen
   = content_for :secondary_nav do  
     = render partial: "patients/clin_sum_sub_nav", locals: { model: @patient }
 
