Edited styling to be more consistent for displaying history of medications and problems

--- a/app/assets/stylesheets/foundation/patient_medications.css.scss
+++ b/app/assets/stylesheets/foundation/patient_medications.css.scss
@@ -1,18 +1,18 @@
 .accordion dd > a.drug-drug, li.drug-drug, tbody tr.drug-drug {
   background: #FFFFFF;
-  padding: 0.2em;
+  padding: 0;
   border-radius: 0.5em;
 }
 
 .accordion dd > a.drug-esa, li.drug-esa, tbody tr.drug-esa{
   background: #FFFF99;
-  padding: 0.2em;
+  padding: 0;
   border-radius: 0.5em;
 }
 
 .accordion dd > a.drug-immunosuppressant, li.drug-immunosuppressant, tbody tr.drug-immunosuppressant {
   background: #CCFFFF;
-  padding: 0.2em;
+  padding: 0;
   border-radius: 0.5em;
 }
 
@@ -41,5 +41,9 @@
 
 .drug-results {
   display: none;
+}
+
+dl.medication-history {
+  left: 0.9em;
 }
 
